--- a/.gitignore
+++ b/.gitignore
@@ -134,17 +134,6 @@ nosetests.xml
 coverage.xml
 *,cover
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-/data
-*.log
-logfile*
-db.sqlite3
-db_test.sqlite3
-
 # Sphinx documentation
 docs/_build/
 
@@ -157,26 +146,6 @@ target/
 
 ## Directory-based project format:
 .idea/
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
 
 ## File-based project format:
 *.ipr
@@ -201,7 +170,6 @@ crashlytics-build.properties
 # Inno
 WinPython-*
 jre7
-mongodb
 install/*
 
 # Apache deployment
@@ -210,14 +178,13 @@ apache
 # redis server
 *.rdb
 
-# migration
-backups/
-
 # Celery
 *.pid
 
-#pylint
-pylint.out
+# Log files
+*.out
+*_log.txt
+*.log*
 
 #radon
 radon.xml
