--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pyyaml>=6.0.3",
     "selenium>=4.39.0",
+    "undetected>=0.0.9",
 ]
 
 [dependency-groups]
